--- a/public/config/config.json
+++ b/public/config/config.json
@@ -13,6 +13,6 @@
   "DISPLAY_COST": 0.01,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Oasis",
-  "MARKETPLACE_LINK": "https://oasis.cash/colection/0xcAd88cBE12bf9A0eAa0f80091dbFbdC0257Abe68",
+  "MARKETPLACE_LINK": "https://oaasis.cash/colection/0xcAd88cBE12bf9A0eAa0f80091dbFbdC0257Abe68",
   "SHOW_BACKGROUND": false
 }
