--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CBears",
-  "name": "Cash Bears",
+  "short_name": "I'M TIRED NFT",
+  "name": "I'M TIRED",
   "icons": [
     {
       "src": "favicon.ico",
