--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,18 +1,18 @@
 {
-  "CONTRACT_ADDRESS": "0xcAd88cBE12bf9A0eAa0f80091dbFbdC0257Abe68",
-  "SCAN_LINK": "https://oasis.cash/collection/0xcAd88cBE12bf9A0eAa0f80091dbFbdC0257Abe68",
+  "CONTRACT_ADDRESS": "0x2E9173F46ea4733538a86025C6bE39fCbd71Eeb6",
+  "SCAN_LINK": "https://oasis.cash/collection/0x2E9173F46ea4733538a86025C6bE39fCbd71Eeb6",
   "NETWORK": {
     "NAME": "SmartBCH",
     "SYMBOL": "BCH",
     "ID": 10000
   },
-  "NFT_NAME": "Cash Bears",
-  "SYMBOL": "CBears",
-  "MAX_SUPPLY": 1500,
-  "WEI_COST": 10000000000000000,
-  "DISPLAY_COST": 0.01,
+  "NFT_NAME": "I'm Tired NFT",
+  "SYMBOL": "I'M Tired NFT",
+  "MAX_SUPPLY": 5555,
+  "WEI_COST": 5000000000000000,
+  "DISPLAY_COST": 0.005,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Oasis",
-  "MARKETPLACE_LINK": "https://oaasis.cash/colection/0xcAd88cBE12bf9A0eAa0f80091dbFbdC0257Abe68",
+  "MARKETPLACE_LINK": "https://oasis.cash/colection/0x2E9173F46ea4733538a86025C6bE39fCbd71Eeb6",
   "SHOW_BACKGROUND": false
 }
