--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,18 +1,18 @@
 {
-  "CONTRACT_ADDRESS": "0xCf58D3e9811d6601896B6ee6Cb50B566CF0634aE",
-  "SCAN_LINK": "https://oasis.cash/collection/0xCf58D3e9811d6601896B6ee6Cb50B566CF0634aE",
+  "CONTRACT_ADDRESS": "0x2E9173F46ea4733538a86025C6bE39fCbd71Eeb6",
+  "SCAN_LINK": "https://oasis.cash/collection/0x2E9173F46ea4733538a86025C6bE39fCbd71Eeb6",
   "NETWORK": {
     "NAME": "SmartBCH",
     "SYMBOL": "BCH",
     "ID": 10000
   },
-  "NFT_NAME": "t",
-  "SYMBOL": "t",
+  "NFT_NAME": "I'M TIRED NFT",
+  "SYMBOL": "I'M TIRED",
   "MAX_SUPPLY": 5555,
   "WEI_COST": 270000000000000000000,
   "DISPLAY_COST": 270,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Oasis",
-  "MARKETPLACE_LINK": "https://oasis.cash/colection/0xCf58D3e9811d6601896B6ee6Cb50B566CF0634aE",
+  "MARKETPLACE_LINK": "https://oasis.cash/colection/0x2E9173F46ea4733538a86025C6bE39fCbd71Eeb6",
   "SHOW_BACKGROUND": false
 }
